Renamed multiple files and added design for arbejdsopgaver

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                   aria-labelledby="eksemplar-tab"
                 >
                   <!-- eksemplar -->
-                  <form action="heuristiskenhed.html">
+                  <form action="search/search-eksemplar.html">
                     <div class="container-fluid">
                       <div class="row mb-3">
                         <div class="col-sm-6">
@@ -442,7 +442,7 @@
                   aria-labelledby="magasinenhed-tab"
                 >
                   <!-- Magasin enhed -->
-                  <form>
+                  <form action="magasinenhed.html">
                     <div class="container-fluid">
                       <div class="row mb-3">
                         <div class="col-sm-12">
