--- a/magasinenhed.html
+++ b/magasinenhed.html
@@ -40,13 +40,13 @@
         <div class="col-10 col-centered">
           <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
             <div class="card-body">
-              <a href="/search/search-arkivskaber.html" class="d-flex mb-4"
+              <a href="index.html#magasinenhed" class="d-flex mb-4"
                 >« Tilbage til søgning</a
               >
-              <span class="badge badge-primary badge-pill mt-2 mb-2"
-                >Arkivskaber</span
+              <span class="badge badge-warning badge-pill mt-2 mb-2"
+                >Magasinenhed</span
               >
-              <h1 class="font-weight-extrabold">Frederiksberg Politi</h1>
+              <h1 class="font-weight-extrabold">Navn</h1>
               <h3 class="text-secondary mb-5">Ordenspolitiet, 1919 - 2006</h3>
               <ul class="nav nav-tabs">
                 <li class="nav-item">
@@ -156,15 +156,15 @@
                         </div>
 
                         <div class="card-body">
-                          <h5 class="font-weight-bold mt-3 ml-3 mb-4">
+                          <h5 class="font-weight-bold mt-3 ml-3 mb-3">
                             Detaljer
                           </h5>
                           <ul
-                            class="list-group mb-5 w-50 mr-3 ml-3"
+                            class="list-group list-group-flush mb-5 w-50 mr-3 ml-3"
                           >
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
-                                <div class="col-sm-6 font-weight-semibold">Navnetype</div>
+                                <div class="col-sm-6">Navnetype</div>
                                 <div class="col-sm-6 readonly">Officielt</div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
@@ -184,7 +184,7 @@
                             </li>
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
-                                <div class="col-sm-6 font-weight-semibold">Beskrivelsesniveau</div>
+                                <div class="col-sm-6">Beskrivelsesniveau</div>
                                 <div class="col-sm-6 readonly">2. niveau</div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
@@ -204,7 +204,7 @@
                             </li>
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
-                                <div class="col-sm-6 font-weight-semibold">Kladde</div>
+                                <div class="col-sm-6">Kladde</div>
                                 <div class="col-sm-6 readonly">Ja</div>
                                 <div class="col-sm-6 write">
                                   <div
@@ -244,7 +244,7 @@
                               </div>
                             </li>
                           </ul>
-                          <h5 class="font-weight-bold mt-3 ml-3 mb-4">Navne</h5>
+                          <h5 class="font-weight-bold mt-3 ml-3 mb-3">Navne</h5>
                           <div class="card bg-white ml-3 mr-3">
                             <div class="card-body p-0 m-0">
                               <table
