--- a/search/search-arbejdsopgave-noresults.html
+++ b/search/search-arbejdsopgave-noresults.html
@@ -168,80 +168,16 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid mt-3 mb-10">
+    <div class="container-fluid mt-3 mb-5">
       <div class="row">
         <div class="col-10 col-centered">
           <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
             <div class="card-body">
               <h4 class="mb-4 ml-1 mt-3">
-                <span class="font-weight-bold">33</span> resultater
+                <span class="font-weight-bold">Ingen</span> resultater, prøv en
+                ny søgning.
               </h4>
-              <div class="card">
-                <table
-                  id="search"
-                  width="100%"
-                  class="table table-hover table-striped"
-                >
-                  <thead>
-                    <tr>
-                      <th scope="col">Opgavenavn</th>
-                      <th scope="col">Ansvarlig</th>
-                      <th scope="col">Dato åbnet</th>
-                      <th scope="col">Dato lukket</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr class="clickable-row" data-href="../arbejdsopgave.html">
-                      <td>
-                        Ny opgave
-                      </td>
-                      <td>Henriette Larsen</td>
-                      <td>15.12.1972</td>
-                      <td>08.12.1971</td>
-                    </tr>
-                    <tr class="clickable-row" data-href="../arbejdsopgave.html">
-                      <td>
-                        Ny opgave
-                      </td>
-                      <td>Henriette Larsen</td>
-                      <td>15.12.1972</td>
-                      <td>08.12.1971</td>
-                    </tr>
-                    <tr class="clickable-row" data-href="../arbejdsopgave.html">
-                      <td>
-                        Ny opgave
-                      </td>
-                      <td>Henriette Larsen</td>
-                      <td>15.12.1972</td>
-                      <td>08.12.1971</td>
-                    </tr>
-                    <tr class="clickable-row" data-href="../arbejdsopgave.html">
-                      <td>
-                        Ny opgave
-                      </td>
-                      <td>Henriette Larsen</td>
-                      <td>15.12.1972</td>
-                      <td>08.12.1971</td>
-                    </tr>
-                    <tr class="clickable-row" data-href="../arbejdsopgave.html">
-                      <td>
-                        Ny opgave
-                      </td>
-                      <td>Henriette Larsen</td>
-                      <td>15.12.1972</td>
-                      <td>08.12.1971</td>
-                    </tr>
-                    <tr class="clickable-row" data-href="../arbejdsopgave.html">
-                      <td>
-                        Ny opgave
-                      </td>
-                      <td>Henriette Larsen</td>
-                      <td>15.12.1972</td>
-                      <td>08.12.1971</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+              <div class="card"></div>
             </div>
           </div>
         </div>
