--- a/search/search-heuristiskenhed.html
+++ b/search/search-heuristiskenhed.html
@@ -142,7 +142,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid mt-3">
+    <div class="container-fluid mt-3 mb-10">
       <div class="row">
         <div class="col-10 col-centered">
           <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
