Added modal for adding eksemplar

--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -66,7 +66,7 @@
               <a href="/search/search-arbejdsopgave.html" class="d-flex mb-4"
                 >« Tilbage til søgning</a
               >
-              <span class="badge badge-secondary">Arbejdsopgave</span>
+              <span class="badge badge-primary">Arbejdsopgave</span>
 
               <h1 class="font-weight-bold mt-3">
                 Min arbejdsopgave
@@ -428,7 +428,7 @@ Nørregade 56
       aria-labelledby="tilfoejeksModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="tilfoejeksModalLabel">
@@ -440,11 +440,145 @@ Nørregade 56
               data-dismiss="modal"
               aria-label="Close"
             >
-              <span aria-hidden="true">&times;</span>
+              <span aria-hidden="true">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 12 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"
+                  />
+                </svg>
+              </span>
             </button>
           </div>
           <div class="modal-body">
             <input type="text" class="form-control" placeholder="Søg..." />
+            <div class="table-responsive">
+              <table
+                id=""
+                width="100%"
+                class="table table-hover table-striped mb-0"
+              >
+                <thead>
+                  <tr>
+                    <th scope="col">
+                      <div
+                        class="form-check form-inline p-0 d-flex align-items-center mb-1"
+                      >
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="defaultCheck1"
+                        />
+                      </div>
+                    </th>
+                    <th scope="col">Præfiks</th>
+                    <th scope="col">Arkivskaber</th>
+                    <th scope="col">HE-Navn</th>
+                    <th scope="col">HE-Fra</th>
+                    <th scope="col">HE-Til</th>
+                    <th scope="col">Eks. Type</th>
+                    <th scope="col">Eks. Navn</th>
+                    <th scope="col">Sort. felt.</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="clickable-checkbox">
+                    <td>
+                      <div
+                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                      >
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="defaultCheck1"
+                        />
+                      </div>
+                    </td>
+                    <td>FRB Politi</td>
+                    <td>Frederiksberg Politi</td>
+                    <td>Kredsaflytningssystem</td>
+                    <td>1988</td>
+                    <td>2020</td>
+                    <td>Papir</td>
+                    <td>Eksx2424</td>
+                    <td>sh29942</td>
+                  </tr>
+                  <tr class="clickable-checkbox">
+                    <td>
+                      <div
+                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                      >
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="defaultCheck1"
+                        />
+                      </div>
+                    </td>
+                    <td>FRB Politi</td>
+                    <td>Frederiksberg Politi</td>
+                    <td>Kredsaflytningssystem</td>
+                    <td>1988</td>
+                    <td>2020</td>
+                    <td>Papir</td>
+                    <td>Eksx2424</td>
+                    <td>sh29942</td>
+                  </tr>
+                  <tr class="clickable-checkbox">
+                    <td>
+                      <div
+                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                      >
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="defaultCheck1"
+                        />
+                      </div>
+                    </td>
+                    <td>FRB Politi</td>
+                    <td>Frederiksberg Politi</td>
+                    <td>Kredsaflytningssystem</td>
+                    <td>1988</td>
+                    <td>2020</td>
+                    <td>Papir</td>
+                    <td>Eksx2424</td>
+                    <td>sh29942</td>
+                  </tr>
+                  <tr class="clickable-checkbox">
+                    <td>
+                      <div
+                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                      >
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="defaultCheck1"
+                        />
+                      </div>
+                    </td>
+                    <td>FRB Politi</td>
+                    <td>Frederiksberg Politi</td>
+                    <td>Kredsaflytningssystem</td>
+                    <td>1988</td>
+                    <td>2020</td>
+                    <td>Papir</td>
+                    <td>Eksx2424</td>
+                    <td>sh29942</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-dismiss="modal">
