Added modal for ny arbejdsopgave and fixed some errors

--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -142,7 +142,7 @@
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-6 font-weight-semibold">
-                                  Kontaktpersson
+                                  Ansvarlig
                                 </div>
                                 <div class="col-sm-6 readonly">LAK</div>
                                 <div class="col-sm-6 write">
