--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                         type="button"
                         class="btn btn-outline-primary btn-sm"
                         data-toggle="modal"
-                        data-target="#opretArkivskaber"
+                        data-target="#nyarbopgave"
                       >
                         + Ny arbejdsopgave
                       </button>
@@ -598,7 +598,7 @@
         </div>
       </div>
     </div>
-    <!-- Modal -->
+    <!-- Modal ny arkivskaber -->
     <div
       class="modal fade"
       id="opretArkivskaber"
@@ -628,6 +628,127 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-dismiss="modal">
               Opret
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal ny arbejdsopgave -->
+    <div
+      class="modal fade"
+      id="nyarbopgave"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="nyarbopgaveModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="nyarbopgaveModalLabel">
+              Ny arbejdsopgave
+            </h5>
+            <button
+              type="button"
+              class="btn close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 12 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"
+                  />
+                </svg>
+              </span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group row">
+              <label for="name" class="col-sm-4 col-form-label"
+                >Opgavenavn</label
+              >
+              <div class="col-sm-8">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  placeholder="Opgavenavn"
+                />
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="ansvarlig"
+                >Ansvarlig</label
+              >
+              <div class="col-sm-8">
+                <select class="form-control" id="kontaktperson">
+                  <option>LSKSK</option>
+                  <option>LAK</option>
+                  <option>LAKAJK</option>
+                  <option>PGA</option>
+                  <option>UDAL</option>
+                  <option>BOXODO</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="type">Type</label>
+              <div class="col-sm-8">
+                <select class="form-control" id="type">
+                  <option>Intern</option>
+                  <option>Ekstern</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="type"
+                >Kontaktoplysninger</label
+              >
+              <div class="col-sm-8">
+                <textarea class="form-control" id="type" rows="5"> </textarea>
+                <small class="form-text text-muted"
+                  >Tilføj evt. Kontaktperson, email og telefonnr.</small
+                >
+              </div>
+            </div>
+            <div class="form-group row mb-0">
+              <div class="col-sm-12">
+                <div class="alert alert-info text-center mb-0" role="alert">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 16 16"
+                    class="mr-3 mb-1"
+                  >
+                    <path
+                      fill="#11545F"
+                      fill-rule="evenodd"
+                      d="M8.893 1.5c-.183-.31-.52-.5-.887-.5s-.703.19-.886.5L.138 13.499a.98.98 0 0 0 0 1.001c.193.31.53.501.886.501h13.964c.367 0 .704-.19.877-.5a1.03 1.03 0 0 0 .01-1.002L8.893 1.5zm.133 11.497H6.987v-2.003h2.039v2.003zm0-3.004H6.987V5.987h2.039v4.006z"
+                    />
+                  </svg>
+                  Eksemplarer kan tilføjes når opgaven er oprettet.
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-dismiss="modal"
+              onclick="window.location.href='/arbejdsopgave.html'"
+            >
+              Opret opgave
             </button>
           </div>
         </div>
